- Fixed some styling - Shift page completed - Remove some logging

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ form {
   flex-direction: column;
   justify-content: space-around;
   width: 170px;
-  height: 200px;
+  margin-bottom: 1%;
 }
 
 .home-header {
@@ -40,9 +40,26 @@ form {
 .home-links {
   display: flex;
   justify-content: space-between;
-  width: 25%;
+  width: 17%;
 }
 
 button {
   margin-top: 8px;
+}
+
+.shift-form {
+  margin-top: 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 500px;
+  flex-wrap: wrap;
+}
+
+.shift-form > label {
+  margin: 3px;
+}
+
+.shift-form > input {
+  margin: 2px;
 }
